--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "express-session": "^1.17.1",
     "swig": "^1.4.2"
   },
   "devDependencies": {
