--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.1",
+    "nodemailer": "^6.4.18",
     "swig": "^1.4.2"
   },
   "devDependencies": {
