--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-session": "^1.17.1",
     "jquery": "^3.5.1",
     "jsdom": "^16.4.0",
+    "leaflet": "^1.7.1",
     "nodemailer": "^6.4.18",
     "swig": "^1.4.2"
   },
