--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.1",
+    "fs-extra": "^9.1.0",
     "jquery": "^3.5.1",
     "jsdom": "^16.4.0",
     "leaflet": "^1.7.1",
